<resources>
    <string name="app_name">Боксёрский таймер</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="timer">Таймер</string>
    <string name="settings">Настройки</string>
    <string name="nutrition_calc">Калькулятор калорий</string>


    <string name="test">ViewBindingSample</string>
    <string name="noName">Не заполнено название</string>
    <string name="noRoundAmount">Не указанно количество раундов</string>
    <string name="noRestTime">Не указанно время отдыха</string>
    <string name="noRoundTime">Не указанно время раунда</string>

    <string name="saved">Сохранено</string>
    <string name="save">Сохранить</string>
    <string name="deleted">Удалено</string>
    <string name="youCantDeleteThis">Вы не можете удалить этот режим</string>


    <string name="start">Старт</string>
    <string name="profile">Режим:</string>
    <string name="deleteProfile">Удалить режим</string>
    <string name="createProfile">Создать режим</string>
    <string name="resume">Продолжить</string>
    <string name="stop">Стоп</string>
    <string name="done">Конец тренировки</string>
    <string name="startAgain">Начать заного</string>
    <string name="rest">Отдых</string>
    <string name="resting">"Отдых: "</string>
    <string name="firstRound">Первый раунд</string>
    <string name="getReady">Приготовьтесь</string>
    <string name="secondRemaining">"Секунд осталось: "</string>
    <string name="showRound">"Раунд "</string>
    <string name="restart">Рестарт</string>
    <string name="roundTime">Время раунда</string>
    <string name="restTime">Время отдыха</string>
    <string name="roundAmount">Количество раундов</string>
    <string name="profileName">Название режима</string>
    <string name="create">Создать</string>
    <string name="delete">Удалить</string>
    <string name="Male">Мужской</string>
    <string name="Female">Женский</string>
    <string name="sex">Пол</string>
    <string name="height">Рост</string>
    <string name="noHeight">Не указан рост</string>
    <string name="age">Возраст</string>
    <string name="noAge">Не указан возраст</string>
    <string name="weight">Вес</string>
    <string name="noWeight">Не указан вес</string>
    <string name="physicalActivity">Физическая активность  ▼</string>
    <string name="calculate">Рассчитать</string>
    <string name="pause">Пауза</string>
    <string name="lightActivity">Минимальная</string>
    <string name="middleActivity">Умеренная</string>
    <string name="heavyActivity">Высокая</string>
    <string name="min">Минуты</string>
    <string name="sec">Секунды</string>
    <string name="next">Далее</string>
    <string name="finish">Готово</string>


</resources>