<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg2Dark"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:text="@string/deleteProfile"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary"
        android:textColor="@color/yellow"
        app:layout_constraintLeft_toRightOf="@id/profile"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="44dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary"
        android:text="@string/delete"
        android:textColor="@color/timerBG"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@id/spinner"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/numPickers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="numPickerMin, numPickerSec, save"
        android:visibility="gone"/>

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/numPickerMin"
        android:layout_width="173dp"
        android:layout_height="236dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:np_dividerColor="@color/invisible"
        app:np_formatter=""
        app:np_height="180dp"
        app:np_max="59"
        app:np_min="0"
        app:np_selectedTextColor="@color/primary"
        app:np_textColor="@color/primary"
        app:np_textSize="25dp"
        app:np_value="1"
        app:np_width="64dp" />

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/numPickerSec"
        android:layout_width="229dp"
        android:layout_height="231dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/numPickerMin"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:np_dividerColor="@color/invisible"
        app:np_formatter=""
        app:np_height="180dp"
        app:np_max="59"
        app:np_min="0"
        app:np_selectedTextColor="@color/primary"
        app:np_textColor="@color/primary"
        app:np_textSize="25dp"
        app:np_value="1"
        app:np_width="64dp" />

    <androidx.appcompat.widget.AppCompatToggleButton
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:textOn="@string/save"
        android:textOff="@string/save"
        android:textColor="@color/timerBG"
        android:visibility="visible"
        android:background="@drawable/btn_calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numPickerMin"
        android:textAllCaps="false"
        />

    <EditText
        android:id="@+id/btnProfileName"
        android:layout_width="243dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/profileName"
        android:inputType="text"
        android:textColor="@color/white"
        android:maxLength="15"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnRoundTime"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRoundTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/roundTime"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/btnRestTime"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/invisible"

        android:textAllCaps="false"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRestTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/restTime"
        android:textColor="@color/white"
        android:background="@color/invisible"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/btnRoundAmount"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRoundAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/roundAmount"
        android:textColor="@color/white"
        android:background="@color/invisible"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/create"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"
        />




    <androidx.appcompat.widget.AppCompatToggleButton
        android:id="@+id/create"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:textOn="@string/create"
        android:textOff="@string/create"
        android:textColor="@color/timerBG"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/btn_calculate"
        android:textAllCaps="false"
         />


</androidx.constraintlayout.widget.ConstraintLayout>