<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/timerBG">


    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile"
        app:layout_constraintVertical_bias="0.315" />

    <TextView
        android:id="@+id/profile"
        android:layout_width="71dp"
        android:layout_height="59dp"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-1dp"


        />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textColor="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.669"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="44dp" />



    <TextView
        android:id="@+id/amountOfRounds"
        android:layout_width="165dp"
        android:layout_height="33dp"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:text="@string/showRound"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/text_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="false"
        android:text="@string/start"
        android:background="@drawable/btn_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPause"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:layout_marginStart="240dp"

        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_sex_female"
        android:text="@string/stop"
        android:textAllCaps="false"
        android:textColor="@color/bg2Dark"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/sexBtnFemale"
        app:layout_constraintRight_toLeftOf="@+id/btnResume"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexTV" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnResume"
        android:textColor="@color/bg2Dark"
        android:layout_width="0dp"
        android:layout_height="76dp"

        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="2dp"
        android:text="@string/resume"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintRight_toLeftOf="@+id/btnPause"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPause"
        app:layout_constraintTop_toBottomOf="@+id/sexTV"
        android:background="@drawable/btn_sex_male" />


</androidx.constraintlayout.widget.ConstraintLayout>